# file-server

./: .gitignore  CMakeLists.txt  Makefile  README.md
components/: CMakeLists.txt
components/lockfreequeue/: CMakeLists.txt
components/lockfreequeue/include/lockfreequeue/: adaptive_blocking_queue.hpp  array_mpmc_queue.hpp  blocking_queue.hpp  list_mpmc_queue.hpp  spin_queue.hpp
components/lockfreequeue/include/lockfreequeue/detail/: backoff.hpp  epoch_reclaimer.hpp  queue_concept.hpp
include/common/: debug.h
include/project/: version.h
src/auth/: auth_manager.cpp  auth_manager.h  password_hash.cpp  password_hash.h  rsa_key_manager.cpp  rsa_key_manager.h
src/cache/: file_meta_cache.h  lru_cache.h
src/client/: cd_handler.cpp  cd_handler.h  client.cpp  client.h  command_parser.cpp  command_parser.h  get_client_handler.cpp  get_client_handler.h  get_pubkey_handler.h  handler.cpp  handler.h  large_put_client_handler.cpp  large_put_client_handler.h  list_handler.cpp  list_handler.h  login_client_handler.cpp  login_client_handler.h  main.cpp  mkdir_handler.cpp  mkdir_handler.h  put_handler.cpp  put_handler.h  register_client_handler.cpp  register_client_handler.h
src/concurrency/: cpu_affinity.h  lf_thread_pool.h  ordered_callback_queue.h  task.h
src/db/: db_error.h  file_repository.cpp  file_repository.h  mysql_pool.cpp  mysql_pool.h  user_file_repository.cpp  user_file_repository.h  user_repository.cpp  user_repository.h
src/db/migrations/: 001_init_users.sql  002_init_files.sql  003_init_user_file.sql
src/handlers/: cd_handler.cpp  cd_handler.h  get_handler.cpp  get_handler.h  handlers.h  large_put_data_handler.cpp  large_put_data_handler.h  list_handler.cpp  list_handler.h  login_handler.cpp  login_handler.h  mkdir_handler.cpp  mkdir_handler.h  pubkey_handler.cpp  pubkey_handler.h  put_handler.cpp  put_handler.h  pwd_handler.cpp  pwd_handler.h  register_handler.cpp  register_handler.h  request_handler.cpp  request_handler.h  rm_handler.cpp  rm_handler.h  rmdir_handler.cpp  rmdir_handler.h
src/net/: connection.cpp  connection.h  epoll_poller.cpp  epoll_poller.h  i_event_handler.h  io_reactor.cpp  io_reactor.h  listener.cpp  listener.h  main_reactor.cpp  main_reactor.h  reactor.h  response_queue.cpp  response_queue.h
src/protocol/: commands.h  error_codes.h  request_parser.cpp  request_parser.h  response_builder.cpp  response_builder.h
src/server/: main.cpp  server.cpp  server.h
src/session/: session.cpp  session.h  session_manager.cpp  session_manager.h  session_store.cpp  session_store.h
src/storage/: directory_tree.cpp  directory_tree.h  file_manager.cpp  file_manager.h  global_open_table.cpp  global_open_table.h  storage_error.h  user_file_handle.cpp  user_file_handle.h  user_open_table.cpp  user_open_table.h
src/types/: context.h  enums.h  file_metadata.h  message.h  pending_large_upload.cpp  pending_large_upload.h  result.h  user.h  user_file.h
src/utils/: hash_utils.cpp  hash_utils.h  socket_transfer.cpp  socket_transfer.h
tests/: CMakeLists.txt  lockfreequeue_bench.cpp  stress_lockfreequeue_adaptive.cpp  test_affinity_demo.cpp  test_circularqueue.cpp  test_db.cpp  test_file_manager.cpp  test_list_mpmc_queue.cpp  test_lockfreequeue_adaptive.cpp  test_lockfreequeue_blocking.cpp  test_mysql_pool.cpp
